@startuml

title __MODERATIONMODULE's Class Diagram__\n

  namespace ModerationModule {
    class ModerationModule.GetMember {
        {static} + get()
    }
  }
  

  namespace ModerationModule {
    class ModerationModule.ModCommand {
        + ModCommand()
        + execute()
        + execute()
        + help()
    }
  }
  

  namespace ModerationModule {
    class ModerationModule.ModCommandMap {
        - modCmdMap : Map<String, ModCommand>
        + containsKey()
        + get()
        + put()
    }
  }
  

  namespace ModerationModule {
    class ModerationModule.ModerationController {
        {static} - logChannel : TextChannel
        + ModerationController()
        + execute()
        {static} + getLogChannel()
        {static} + setLogChannel()
    }
  }
  

  ModerationModule.ModCommand -up-|> Commands.Command
  ModerationModule.ModCommand o-- ModerationModule.ModerationController : modCTRL
  ModerationModule.ModerationController o-- Main.Controller : ctrl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
